Closed
Bug 1275411
Opened 9 years ago
Closed 9 years ago
[e10s] css with nested hidden and visible styling has regressed in firefox beta v48.0a2 since version 46.0.1
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla49
People
(Reporter: rodney.draaisma, Assigned: tnikkel)
References
Details
(Keywords: regression, Whiteboard: [parity-IE][parity-Chrome][parity-Edge])
Attachments
(3 files)
9.18 KB,
text/html
|
Details | |
240 bytes,
text/html
|
Details | |
2.88 KB,
patch
|
mattwoodrow
:
review+
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:46.0) Gecko/20100101 Firefox/46.0
Build ID: 20160521140538
Steps to reproduce:
I created a popout panel that consists of alternating hidden and visible items see the attached file.
If you load the attached file in version 48 beta, no popout panel is showing.
While loading it in an older versions of firefox or in any other browser it will show the popout panel.
If you want to see what it should look like, open the attached html file in Firefox 46.0.1, chrome/chromium, ie 11 or edge
Actual results:
Popout field is not showing on firefox 48 beta, but does show on all other browsers including firefox 46.0.1
Expected results:
Show the popout field.
Reporter | ||
Updated•9 years ago
|
OS: Unspecified → Linux
Hardware: Unspecified → x86_64
![]() |
||
Comment 1•9 years ago
|
||
[Tracking Requested - why for this release]: layout is broken due to regression
![]() |
||
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
status-firefox49:
--- → affected
tracking-e10s:
--- → ?
Component: Untriaged → Layout
Ever confirmed: true
OS: Linux → All
Product: Firefox → Core
Summary: css with nested hidden and visible styling has regressed in firefox beta v48.0a2 since version 46.0.1 → [e10s] css with nested hidden and visible styling has regressed in firefox beta v48.0a2 since version 46.0.1
![]() |
||
Comment 2•9 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=c525c5164cdde373a636d525e53c77f52d8fd693&tochange=c99e8abb5e00eaa439a3be7864df0e4135326349
Suspect : Bug 1231538
Blocks: 1231538
Flags: needinfo?(matt.woodrow)
Keywords: regression
Whiteboard: [parity-IE][parity-Chrome][parity-Edge]
Assignee | ||
Comment 3•9 years ago
|
||
I can reproduce in old nightly builds, but this is fixed for me in current nightly. Presumably because of bug 1265237.
![]() |
||
Comment 4•9 years ago
|
||
(In reply to Timothy Nikkel (:tnikkel) from comment #3)
> I can reproduce in old nightly builds, but this is fixed for me in current
> nightly. Presumably because of bug 1265237.
NO.
I can still reproduce on Nightly49.0a1 [1] with e10s.
[1]
https://hg.mozilla.org/mozilla-central/rev/d6d4e8417d2fd71fdf47c319b7a217f6ace9d5a5
Mozilla/5.0 (Windows NT 10.0; WOW64; rv:49.0) Gecko/20100101 Firefox/49.0 ID:20160525063710
Assignee | ||
Comment 5•9 years ago
|
||
Oops, my mistake, I didn't test current nightly with e10s.
Assignee | ||
Comment 6•9 years ago
|
||
Assignee | ||
Comment 7•9 years ago
|
||
When we are saving oof data for the outer fixed frame we don't save any oof data because the fixed frame has zero size since it doesn't contain anything. So when we descend into the outer fixed frame via it's placeholder later we reset the clip state, but leave the scroll clip state alone. The scrollclip from the empty overflow: hidden div is providing the scroll clip. That scroll clip is the one that is current when we later create the nsDisplayFixedPos item.
Only shows up on e10s cause we only create nsDisplayFixedPos items when there is a display port. Creating nsDisplayFixedPos items when there is fixed pos without a displayport lets you reproduce on non-e10s.
I was _just_ thinking that we should clear the scroll clip here, but I managed to convince myself that we didn't need to. Oops.
Assignee: nobody → tnikkel
Flags: needinfo?(matt.woodrow)
Attachment #8756652 -
Flags: review?(matt.woodrow)
Updated•9 years ago
|
Attachment #8756652 -
Flags: review?(matt.woodrow) → review+
Assignee | ||
Comment 8•9 years ago
|
||
![]() |
||
Updated•9 years ago
|
Comment 11•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Assignee | ||
Comment 12•9 years ago
|
||
Comment on attachment 8756652 [details] [diff] [review]
patch + test
Approval Request Comment
[Feature/regressing bug #]: bug 1231538
[User impact if declined]: some popup menu designs using fixed pos won't render
[Describe test coverage new/current, TreeHerder]: added a test
[Risks and why]: low risk
[String/UUID change made/needed]: none
Attachment #8756652 -
Flags: approval-mozilla-aurora?
Comment on attachment 8756652 [details] [diff] [review]
patch + test
Regression in e10s scenario, Aurora48+
Attachment #8756652 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Hi Rodney, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(rodney.draaisma)
Reporter | ||
Comment 15•9 years ago
|
||
I can confirm this is fixed on version 49.0a1 (2016-05-27)
Updated•9 years ago
|
Flags: needinfo?(rodney.draaisma) → in-testsuite+
Comment 16•9 years ago
|
||
bugherder uplift |
Comment 17•9 years ago
|
||
Pushed by tnikkel@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0fc30c000238
Actually enable reftest.
Assignee | ||
Comment 18•9 years ago
|
||
(In reply to Pulsebot from comment #17)
> Pushed by tnikkel@gmail.com:
> https://hg.mozilla.org/integration/mozilla-inbound/rev/0fc30c000238
> Actually enable reftest.
The reftest.list entry addition must have gotten lost when I failed to do a rebase correctly.
Comment 19•9 years ago
|
||
bugherder |
You need to log in
before you can comment on or make changes to this bug.
Description
•