Bug 1275411. When descending into an out-of-flow without saved out of flow data we need to clear the scroll clip too. r=mattwoodrow